--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -3,7 +3,8 @@
  */
 :root {
   --color-dipper: #202427;
-  --color-mabel: #8F99A3;
-  --color-stan: #C7CCD1;
+  --color-mabel: #8f99a3;
+  --color-stan: #c7ccd1;
   --color-wendy: #fff;
+  --color-soos: #2578f4;
 }
