--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,13 +15,39 @@ body {
   box-sizing: border-box;
 }
 
-p {
+p,
+h1,
+ul,
+li {
   margin: 0;
   padding: 0;
+}
+
+li {
+  list-style: none;
 }
 
 button,
 input {
   border: none;
   outline: none;
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-thumb {
+  width: 4px;
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--color-waddles);
 }
