--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,5 +1,6 @@
-@use './fonts.scss';
-@use './vars.scss';
+@import './fonts.scss';
+@import './vars.scss';
+@import './scrollbar.scss';
 
 body {
   margin: 0;
@@ -44,23 +45,5 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
-
-::-webkit-scrollbar,
-::-webkit-scrollbar-track,
-::-webkit-scrollbar-thumb {
-  width: 4px;
-}
-
-::-webkit-scrollbar {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 8px;
-  background-color: var(--color-waddles);
+  cursor: pointer;
 }
