Рефакторинг && Компонент Прогресс-Бара

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -8,4 +8,6 @@
   --color-wendy: #fff;
   --color-soos: #2578f4;
   --color-waddles: #2024271a;
+  --color-manly-dan: #2024270d;
+  --color-pacifica: #d7d7d7;
 }
