--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -9,6 +9,16 @@
 }
 
 @font-face {
+  font-weight: 600;
+  font-family: Inter;
+  font-style: normal;
+  src:
+    url('@/assets/fonts/Inter-SemiBold.woff2') format('woff2'),
+    url('@/assets/fonts/Inter-SemiBold.woff') format('woff'),
+    url('@/assets/fonts/Inter-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
   font-weight: 700;
   font-family: Inter;
   font-style: normal;
